<resources>
    <string name="app_name">MyManager</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Navigation header title</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_View_grups">Groups</string>
    <string name="menu_cerca_casi">Search case studies</string>

    <string name="menu_casiDiStudio">Case studies</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_name_team">Enter name of group</string>
    <string name="enter_name_case_study">Enter the name of the case study</string>
    <string name="enter_name_exam">Enter the name of the exam</string>
    <string name="enter_cs_info">Enter case study information</string>
    <string name="creates">Creates</string>
    <string name="enter_students_freshman">Enter the student\'s freshman</string>
    <string name="create_group">Create group</string>
    <string name="enter_name_group_subscribe">Enter the name of the group you want to subscribe</string>
    <string name="subscribe">Subscrive</string>
    <string name="cs_name">Case Study Name</string>
    <string name="exam_name">Exam name:</string>
    <string name="prof_name">Professor name:</string>
    <string name="group_name">Group Name:</string>
    <string name="description">Description</string>
    <string name="abandons">Leave</string>
    <string name="add_files">Add files</string>
    <string name="case_study">Case study:</string>
    <string name="creator_name">Creator name</string>
    <string name="participant_name">Participant name</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_group">Delete group</string>
    <string name="leave_group">Leave group</string>
    <string name="list_registered_groups">List of registered groups</string>
    <string name="change_cs_name">Change case study name</string>
    <string name="change_exam_name">Change exam name</string>
    <string name="edit_cs_info">Edit case study information</string>
    <string name="delete_cs">Delete case study</string>
    <string name="enter_freshman">Enter your freshman</string>
    <string name="enter_pass">Enter password</string>
    <string name="registered">Registered</string>
    <string name="click_here">Click here to move on</string>
    <string name="enter_email">Enter your email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date_birth">Date of birth</string>
    <string name="freshman">Freshman</string>
    <string name="enter_n_e_p">Enter your name, exam or professor</string>
    <string name="search">Search</string>
    <string name="recupero_password">Have you forgotten your password?</string>
    <string name="scrivi_email">Please send an email to mymanager2022@gmail.com</string>
    <string name="not_have_account">Don\'t have an account? You register</string>
    <string name="fill_field">Fill in the field!</string>
    <string name="error_list">Error: Empty logged in user list</string>
    <string name="login_success">Login successful!</string>
    <string name="incorrect_fresh_pass">Incorrect freshman or password!</string>
    <string name="fill_fields">Fill in all fields!</string>
    <string name="change_picture">Change profile picture</string>
    <string name="miss_image">Missing image</string>
    <string name="where_pic">Where do you want to get the picture for your profile?</string>
    <string name="gallery">Gallery</string>
    <string name="already_accept">You have already accepted</string>
    <string name="change_complet">Change completed!</string>
    <string name="some_wrong">Something went wrong</string>
    <string name="perm_requ">Permission required</string>
    <string name="perm_not_yet">This permission has not yet been accepted</string>
    <string name="accept">Accept</string>
    <string name="ref">Refuses</string>
    <string name="crea_com">Creation completed</string>
    <string name="empty">Empty</string>
    <string name="group_crea">Group creation completed</string>
    <string name="group_name_alrea">Group name already exists</string>
    <string name="fill_two_fiel">Fill in at least the first two fileds!</string>
    <string name="req">Request</string>
    <string name="title">Title</string>
    <string name="up_image">Uploading image</string>
    <string name="ima_up">Image uploaded</string>
    <string name="fail_up">Failed upload</string>
    <string name="prog">Progress</string>
    <string name="enroll">Enrolled!</string>
    <string name="conf">Confirm</string>
    <string name="sure_leave_cs">Are you sure you want to leave the case study?</string>
    <string name="yes">Yes</string>
    <string name="leave_cs">Case study leaved!</string>
    <string name="sure_join_group">Are you sure you want to join the group?</string>
    <string name="reg_made">Registration made!</string>
    <string name="group_alr_another">Group already enrolled in another case study!</string>
    <string name="signup_must_creator">To sign up you must be the creator of the group!</string>
    <string name="enter_name_exist">Enter the name of an existing group!</string>
    <string name="accept_perm">Accept permission</string>
    <string name="choos_fil">Choose a file</string>
    <string name="havent_select_fil">You haven\'t selected any files</string>
    <string name="uploa_file">Uploading file</string>
    <string name="file_uploa">File uploaded</string>
    <string name="descri">Description:</string>
    <string name="creator">Creator:</string>
    <string name="noex_fresh">Non-existent freshman!</string>
    <string name="saved_change">Saved changes!</string>
    <string name="one_freshman_same_incorr">One of the fresjamn is incorrect or the same as the others, or enter al least one participant!</string>
    <string name="are_you_sure_leave_group">Are you sure you want to leave the group?</string>
    <string name="group_leaved">Group leaved!</string>
    <string name="sure_delete_group">Are you sure you want to delete the group?</string>
    <string name="group_delet">Group deleted!</string>
    <string name="menu_crea_gruppo">Create group</string>
    <string name="cs_details">Case study details</string>
    <string name="sure_del_cs">Are you sure you want to delete the case study?</string>
    <string name="cs_delete">Case study deleted!</string>
    <string name="msg_down">Downloading please wait!</string>
    <string name="down_comp">Download completed</string>
    <string name="down_fail">Download failed</string>
    <string name="fre">Freshman:</string>
    <string name="reg_com">Registration complete!</string>
    <string name="g_x">Group X</string>
    <string name="show_doc">Show documents</string>
    <string name="file_name">File name</string>
    <string name="down">Download</string>
    <string name="course">Course</string>
    <string name="cs_1">Case study 1</string>
    <string name="no_group_f">No group found!</string>
    <string name="no_cs_f">No case studies found!</string>
    <string name="no_reg_gro">No registered group!</string>
    <string name="crea_grup">Create a group</string>
    <string name="list_doc_group">List of documents uploaded by the group:</string>
    <string name="no_doc_f">No documents found!</string>
    <string name="crea_cs">Create a case study</string>
    <string name="info_g">Group info</string>
    <string name="att_fil">Attached files</string>
    <string name="grop_enroll">Groups enrolled in the case study</string>
    <string name="reg">Registration</string>
    <string name="cs_duep">Case study:</string>
    <string name="som_fre_same">Some of the freshman are the same!</string>
    <string name="one_fre_incorr">One of the freshman is incorrect, or enter al least one participant!</string>
    <string name="group_cre_com">Group creation completed!</string>
    <string name="grop_name_alre">Group name already exists!</string>
</resources>