<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mymanager.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.mymanager.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <activity
        android:id="@+id/nav_crea_gruppi"
        android:name="com.example.mymanager.CreaGruppo"
        android:label="@string/menu_crea_gruppo"
        tools:layout="@layout/activity_crea_gruppo" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.mymanager.ListaGruppiFragment"
        android:label="@string/menu_View_grups"
        tools:layout="@layout/fragment_lista_gruppi" />


    <fragment
        android:id="@+id/nav_casiDiStudio"
        android:name="com.example.mymanager.CasiDiStudioFragment"
        android:label="@string/menu_casiDiStudio"
        tools:layout="@layout/fragment_casi_di_studio" />

    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.mymanager.MainActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_main" />
</navigation>