<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_gruppi"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/menu_gruppi"
            />
        <item
            android:id="@+id/nav_casiDiStudio"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_casiDiStudio"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"
            />
    </group>
</menu>