<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoGruppo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-48dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TextView
                android:id="@+id/textViewNomeCasoGruppo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_study"
                android:textColor="@color/blue_app"
                android:textSize="25dp"
                android:padding="10dp"
                android:layout_margin="20dp"
                />

            <TextView
                android:id="@+id/textViewModNomeGruppo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:textColor="@color/blue_app"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <EditText
                android:id="@+id/editTextModNomeGruppo"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_style2"
                android:ems="10"
                android:hint="@string/insert_name_team"
                android:inputType="text"
                android:padding="10dp"
                android:shadowColor="@color/black"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <TextView
                android:id="@+id/textViewCreatore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator_name"
                android:textColor="@color/blue_app"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <EditText
                android:id="@+id/editTextCreatore"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_style2"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:shadowColor="@color/black"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:enabled="false"/>

            <TextView
                android:id="@+id/textViewModPart2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participant_name"
                android:textColor="@color/blue_app"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <EditText
                android:id="@+id/editTextModPart2"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_style2"
                android:ems="10"
                android:hint="@string/enter_students_freshman"
                android:inputType="number"
                android:padding="10dp"
                android:shadowColor="@color/black"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <TextView
                android:id="@+id/textViewModPart3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participant_name"
                android:textColor="@color/blue_app"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <EditText
                android:id="@+id/editTextModPart3"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_style2"
                android:ems="10"
                android:hint="@string/enter_students_freshman"
                android:inputType="number"
                android:padding="10dp"
                android:shadowColor="@color/black"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <TextView
                android:id="@+id/textViewModPart4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participant_name"
                android:textColor="@color/blue_app"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <EditText
                android:id="@+id/editTextModPart4"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_style2"
                android:ems="10"
                android:hint="@string/enter_students_freshman"
                android:inputType="number"
                android:padding="10dp"
                android:shadowColor="@color/black"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <Button
                android:id="@+id/buttonSalvaModGruppo"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:backgroundTint="#0094FF"
                android:text="@string/save_changes"
                android:textColor="#FFFFFF"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/buttonCancellaGruppo"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#0094FF"
                android:text="@string/delete_group"
                android:textColor="#FFFFFF"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/buttonAbbandonaGruppo"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:backgroundTint="#0094FF"
                android:text="@string/leave_group"
                android:textColor="#FFFFFF"
                android:textSize="20dp"/>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>