<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0094FF"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <!-- everything you already have -->
            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/editTextMatricola"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:hint="@string/enter_freshman"
                android:padding="10dp"
                android:inputType="number"
                android:shadowColor="@color/black"
                android:textColor="#0094FF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:hint="@string/enter_pass"
                android:padding="10dp"
                android:inputType="textPassword"
                android:shadowColor="@color/black"
                android:textColor="#0094FF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewRegistrati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:text="@string/registered"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="onClick"/>

            <TextView
                android:id="@+id/textRecupero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:text="@string/recupero_password"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:backgroundTint="#FFFFFF"
                android:text="Login"
                android:textColor="#0094FF"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>